fix: remove justified text alignment for better a11y compliance

--- a/css/styles.css
+++ b/css/styles.css
@@ -471,7 +471,7 @@ a:visited {
     color: var(--text-color);
     margin-bottom: var(--spacing-lg);
     line-height: 1.7;
-    text-align: justify;
+    text-align: left;  /* CAMBIADO DE justify A left */
     font-weight: 500;
 }
 
@@ -868,7 +868,7 @@ a:visited {
     color: var(--text-light);
     line-height: 1.6;
     margin-bottom: var(--spacing-md);
-    text-align: justify;
+    text-align: left;  /* CAMBIADO DE justify A left */
     font-weight: 600;
 }
 
@@ -1039,7 +1039,7 @@ a:visited {
     font-size: var(--font-size-small);
     color: var(--text-light);
     line-height: 1.6;
-    text-align: justify;
+    text-align: left;  /* CAMBIADO DE justify A left */
     font-weight: 600;
 }
 
